@@ -9,9 +9,9 @@ module SparkApi
     end
     
     # valid configuration options
-    VALID_OPTION_KEYS = [:api_key, :api_secret, :api_user, :endpoint, 
-      :user_agent, :version, :ssl, :ssl_verify, :oauth2_provider, :authentication_mode, 
-      :auth_endpoint, :callback, :compress, :timeout, :middleware, :dictionary_version, :request_id_chain, :user_ip_address].freeze
+    VALID_OPTION_KEYS = [:api_key, :api_secret, :api_user, :endpoint,
+      :user_agent, :version, :ssl, :ssl_verify, :oauth2_provider, :authentication_mode,
+      :auth_endpoint, :callback, :compress, :timeout, :middleware, :dictionary_version, :request_id_chain, :user_ip_address, :verbose].freeze
     OAUTH2_KEYS = [:authorization_uri, :access_uri, :client_id, :client_secret,
       # Requirements for authorization_code grant type
       :redirect_uri,  
@@ -47,6 +47,7 @@ module SparkApi
     DEFAULT_DICTIONARY_VERSION = nil
     DEFAULT_REQUEST_ID_CHAIN = nil
     DEFAULT_USER_IP_ADDRESS = nil
+    DEFAULT_VERBOSE = false
     
     X_SPARK_API_USER_AGENT = "X-SparkApi-User-Agent"
     X_USER_IP_ADDRESS = "X-User-IP-Address"
@@ -85,6 +86,7 @@ module SparkApi
       self.dictionary_version = DEFAULT_DICTIONARY_VERSION
       self.request_id_chain = DEFAULT_REQUEST_ID_CHAIN
       self.user_ip_address = DEFAULT_USER_IP_ADDRESS
+      self.verbose = DEFAULT_VERBOSE
       self
     end
   end
