@@ -2,6 +2,8 @@ v1.7.0
  - Drop support for ruby 2.7
  - Add support for ruby 3.2+
  - Require minimum version of faraday 2.0
+ - Disabled request/response logging by default. Old behavior can be restored
+   by setting a new `verbose` configuration option to true
 
 v1.6.3
  - Add support for sending end user ip address in request headers
